--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,7 @@ html,body{
     clear: both;
     display: table;
 }
-section figure{
+.contbody figure{
     float: left;
     margin-right: 10px;
 }
